fix: cr19 main nav spacing decrease to fit in another link

--- a/sass/themes/cr/2019/components/navigation/_main-nav.scss
+++ b/sass/themes/cr/2019/components/navigation/_main-nav.scss
@@ -97,7 +97,7 @@ header[role="banner"] {
       }
 
       @include breakpoint($desktop-nav-breakpoint) {
-        margin-right: 15px;
+        margin-right: 8px;
         background-color: transparent;
       }
 
@@ -148,7 +148,7 @@ header[role="banner"] {
 
             @include breakpoint($desktop-nav-breakpoint) {
               padding: 30px 0px;
-              margin: 0 10px;
+              margin: 0 8px;
               &:hover>a {
                 background-color: transparent;
               }
